Factory method implemented with an example which uses it to determine if connect to a postgres or mysql database

--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,7 @@
     <modules>
         <module>abstract_factory_pattern</module>
         <module>builder_pattern</module>
+        <module>factory_method_pattern</module>
     </modules>
 
     <properties>
