--- a/decorator_pattern/pom.xml
+++ b/decorator_pattern/pom.xml
@@ -3,26 +3,26 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
+    <parent>
+        <groupId>com.diegoBermudez</groupId>
+        <artifactId>designPatterns</artifactId>
+        <version>1.0-SNAPSHOT</version>
+    </parent>
 
-    <groupId>com.diegoBermudez</groupId>
-    <artifactId>designPatterns</artifactId>
-    <version>1.0-SNAPSHOT</version>
-    <packaging>pom</packaging>
-    <modules>
-        <module>abstract_factory_pattern</module>
-        <module>builder_pattern</module>
-        <module>factory_method_pattern</module>
-        <module>prototype_pattern</module>
-        <module>singleton_pattern</module>
-        <module>adapter_pattern</module>
-        <module>composite_pattern</module>
-        <module>decorator_pattern</module>
-    </modules>
+    <artifactId>decorator_pattern</artifactId>
 
     <properties>
         <maven.compiler.source>17</maven.compiler.source>
         <maven.compiler.target>17</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
+
+    <dependencies>
+        <dependency>
+            <groupId>com.fasterxml.jackson.dataformat</groupId>
+            <artifactId>jackson-dataformat-xml</artifactId>
+            <version>2.11.1</version>
+        </dependency>
+    </dependencies>
 
 </project>
